--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.6.3",
     "lucide-react": "^0.462.0",
+    "motion": "^12.6.3",
     "next": "14.2.18",
     "next-themes": "^0.4.3",
+    "ogl": "^1.0.11",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.5",
